feat: add Signup and Login logic
