# doc/api.yaml
@@ -126,7 +126,7 @@ security:
   - bearerAuth: []
 
 paths:
-  /login:
+  /auth/login:
     post:
       tags:
         - Login
@@ -163,7 +163,7 @@ paths:
                 description: JWT Token
         403:
           description: Incorrect login or password
-  /signup:
+  auth/signup:
     post:
       tags:
         - Signup
